src/objects/Pre_Admission_Assessment__c.object
<CustomObject>
    <fields>
        <fullName>Have_you_experienced_a_traumatic_event__c</fullName>
        <inlineHelpText>Have you experienced a traumatic event? Please include the details about the event - date and people involved</inlineHelpText>
        <label>Have you experienced a traumatic event?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Have_you_experienced_in_the_past_30_days__c</fullName>
        <label>Have you experienced in the past 30 days</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>suicidal thoughts/attempts</fullName>
                </value>
                <value>
                    <fullName>homicidal thoughts</fullName>
                </value>
                <value>
                    <fullName>history of violent behavior</fullName>
                </value>
                <value>
                    <fullName>self-harm (self mutilation/disfigurement)</fullName>
                </value>
                <value>
                    <fullName>Any Overdoses</fullName>
                </value>
                <value>
                    <fullName>History of eating disorder (anorexia, bulimia, binging, purging, restricting)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_experienced_in_your_life__c</fullName>
        <label>Have you experienced in your life</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>suicidal thoughts/attempts</fullName>
                </value>
                <value>
                    <fullName>homicidal thoughts</fullName>
                </value>
                <value>
                    <fullName>history of violent behaviors</fullName>
                </value>
                <value>
                    <fullName>self-harm (self mutilation/disfigurement)</fullName>
                </value>
                <value>
                    <fullName>any overdoses</fullName>
                </value>
                <value>
                    <fullName>History of eating disorder (anorexia, bulimia, binging, purging, restricting)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_tried_to_stop_on_your_own__c</fullName>
        <inlineHelpText>Have you tried to stop on your own and could not? Please include the details</inlineHelpText>
        <label>Have you tried to stop on your own?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hazardous_Situations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hazardous Situations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Headache__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Headache</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Heroin_Age_of_First_Use__c</fullName>
        <label>Heroin Age of First Use</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Heroin_Amount_Commonly_Used__c</fullName>
        <label>Heroin Amount Commonly Used</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heroin_Comment_Details__c</fullName>
        <label>Heroin Comment/Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Heroin_Details__c</fullName>
        <label>Heroin Details</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Drug of Choice</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Patient denies</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Heroin_Duration__c</fullName>
        <label>Heroin Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>less than a month</fullName>
                </value>
                <value>
                    <fullName>less than 3 months</fullName>
                </value>
                <value>
                    <fullName>less than 6 months</fullName>
                </value>
                <value>
                    <fullName>less than a year</fullName>
                </value>
                <value>
                    <fullName>more than a year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Heroin_How_Often__c</fullName>
        <label>Heroin How Often</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>daily</fullName>
                </value>
                <value>
                    <fullName>1x per week</fullName>
                </value>
                <value>
                    <fullName>2x per week</fullName>
                </value>
                <value>
                    <fullName>3x per week</fullName>
                </value>
                <value>
                    <fullName>4x per week</fullName>
                </value>
                <value>
                    <fullName>1x per month or less</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Heroin_Last_Used__c</fullName>
        <label>Heroin Last Used</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Heroin_Route__c</fullName>
        <label>Heroin Route</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IV</fullName>
                </value>
                <value>
                    <fullName>Nasal</fullName>
                </value>
                <value>
                    <fullName>Oral</fullName>
                </value>
                <value>
                    <fullName>Smoke</fullName>
                </value>
                <value>
                    <fullName>Patient denies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>High_risk_Work_Behavior__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High-risk Work Behavior</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Highest_level_of_Education_Completed__c</fullName>
        <label>Highest level of Education Completed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>First Grade</fullName>
                </value>
                <value>
                    <fullName>Second Grade</fullName>
                </value>
                <value>
                    <fullName>Third Grade</fullName>
                </value>
                <value>
                    <fullName>Fourth Grade</fullName>
                </value>
                <value>
                    <fullName>Fifth Grade</fullName>
                </value>
                <value>
                    <fullName>Sixth Grade</fullName>
                </value>
                <value>
                    <fullName>Seventh Grade</fullName>
                </value>
                <value>
                    <fullName>Eighth Grade</fullName>
                </value>
                <value>
                    <fullName>Ninth Grade</fullName>
                </value>
                <value>
                    <fullName>Tenth Grade</fullName>
                </value>
                <value>
                    <fullName>Eleventh Grade</fullName>
                </value>
                <value>
                    <fullName>Twelfth Grade</fullName>
                </value>
                <value>
                    <fullName>GED</fullName>
                </value>
                <value>
                    <fullName>Vocational Certificate w/o Diploma/GED</fullName>
                </value>
                <value>
                    <fullName>Vocational Certificate with Diploma/GED</fullName>
                </value>
                <value>
                    <fullName>Some College, no degree</fullName>
                </value>
                <value>
                    <fullName>Associate Degree</fullName>
                </value>
                <value>
                    <fullName>Bachelors Degree</fullName>
                </value>
                <value>
                    <fullName>Graduate Degree</fullName>
                </value>
                <value>
                    <fullName>High School Diploma</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>History_of_Detox_Complications__c</fullName>
        <label>History of Detox Complications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Patient Denies</fullName>
                </value>
                <value>
                    <fullName>Dilerium Tremors</fullName>
                </value>
                <value>
                    <fullName>Seizures</fullName>
                </value>
                <value>
                    <fullName>Blackouts</fullName>
                </value>
                <value>
                    <fullName>Hallucinations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>History_of_Eating_Disorder__c</fullName>
        <inlineHelpText>Anorexia, Bulimia, Binging, Purging, Restricting?</inlineHelpText>
        <label>History of Eating Disorder?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Patient Denies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>History_of_Violent_Bahavior__c</fullName>
        <label>History of Violent Bahavior?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In the Past 30 Days</fullName>
                </value>
                <value>
                    <fullName>In Lifetime</fullName>
                </value>
                <value>
                    <fullName>Patient_Denies</fullName>
                    <label>Patient Denies</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>History_of_Violent_Behavior_30days__c</fullName>
        <label>History of Violent Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>History_of_Violent_Behavior_InLife__c</fullName>
        <label>History of Violent Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Homicidal_Thoughts_30days__c</fullName>
        <label>Homicidal Thoughts</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Homicidal_Thoughts_Details__c</fullName>
        <label>Homicidal Thoughts Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Homicidal_Thoughts_InLife__c</fullName>
        <label>Homicidal Thoughts</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Homicidal_Thoughts__c</fullName>
        <label>Homicidal Thoughts?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In the Past 30 Days</fullName>
                </value>
                <value>
                    <fullName>In Lifetime</fullName>
                </value>
                <value>
                    <fullName>Patient_Denies</fullName>
                    <label>Patient Denies</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Household_drug_use__c</fullName>
        <label>Household drug use?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_long_have_you_been_employed__c</fullName>
        <inlineHelpText>If employed, how long have you been with your current employer</inlineHelpText>
        <label>How long have you been employed?</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Unemployed_last_date_of_employment__c</fullName>
        <label>If Unemployed, last date of employment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>If_Yes_List_the_medications__c</fullName>
        <inlineHelpText>Are there any meditations that you are supposed to be taking but are not? If yes, please list and describe:</inlineHelpText>
        <label>If Yes, List the medications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_documentation_is_needed_describe__c</fullName>
        <label>If documentation is needed, describe</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_other_describe_flu_symptoms__c</fullName>
        <label>If other, describe.</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_other_please_describe_traveled__c</fullName>
        <label>If other, please describe.</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_previous_ODs_date_of_last_and_detail__c</fullName>
        <label>If previous ODs, date of last and detail</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_so_to_and_from_where_and_when__c</fullName>
        <label>If so, to and from where and when?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_so_when_Where_Results__c</fullName>
        <label>If so, when? Where? Results?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_date_of_last_one_and_cause__c</fullName>
        <label>If yes, date of last one and cause</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_describe2_wound__c</fullName>
        <label>If yes describe</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_describe3_history_sa__c</fullName>
        <label>If yes describe</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_describe4_mobility__c</fullName>
        <label>If yes describe</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_describe5_routines__c</fullName>
        <label>If yes describe</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_describe6_rx__c</fullName>
        <label>If yes describe</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_describe7_device__c</fullName>
        <label>If yes describe</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_describe8_hospital__c</fullName>
        <label>If yes describe</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_describe_Selfharm_30days__c</fullName>
        <label>If yes describe</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_describe_Selfharm_InLife__c</fullName>
        <label>If yes describe</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_describe_contact_covid__c</fullName>
        <label>If yes, describe.</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_describe_eating_disorder30days__c</fullName>
        <label>If yes describe</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_describe_eating_disorder_InLife__c</fullName>
        <label>If yes describe</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_describe_history_violent30days__c</fullName>
        <inlineHelpText>Describe the History of Violent Behavior</inlineHelpText>
        <label>If yes describe</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_describe_history_violent_InLife__c</fullName>
        <label>If yes describe</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_describe_length_treatment_etc__c</fullName>
        <inlineHelpText>cause of pain, current pain level</inlineHelpText>
        <label>If yes describe length, treatment etc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_describe_meds_or_treament_MH__c</fullName>
        <label>If yes describe meds or treament</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_describe_work__c</fullName>
        <label>If yes describe:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_explain__c</fullName>
        <label>If no, explain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_explain_blood__c</fullName>
        <label>If no, explain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_explain_groups__c</fullName>
        <label>If no, explain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_explain_rationale__c</fullName>
        <defaultValue>&quot;Based on this assessment the client has been scheduled for further assessment and determination of appropriateness of admission. The level of care will be determined during their extensive evaluation by the providers at our facility.&quot;</defaultValue>
        <label>If yes explain rationale</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_for_how_long_and_give_details_rec__c</fullName>
        <label>If yes, for how long and give details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_homicidal_thoughts_30days__c</fullName>
        <label>If yes describe</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_homicidal_thoughts_InLife__c</fullName>
        <label>If yes describe</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_list_noncompliant__c</fullName>
        <label>If yes list</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_patient_had_any_overdose30days__c</fullName>
        <label>If yes describe</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_patient_had_any_overdose_InLife__c</fullName>
        <label>If yes describe</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_please_list_allergies__c</fullName>
        <label>If yes, please list.</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_provide_details_pregnant__c</fullName>
        <label>If yes, provide details.</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_someone_suspected_with_Covid19__c</fullName>
        <inlineHelpText>Have you had contact with anyone who is suspected to have Covid19?</inlineHelpText>
        <label>If yes describe</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_suicidal_thoughts_30days__c</fullName>
        <label>If yes describe</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_suicidal_thoughts_InLife__c</fullName>
        <label>If yes describe</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_who2_sober_supports__c</fullName>
        <label>If yes, who?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_who_household_drug__c</fullName>
        <label>If yes, who?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Impaired_Ability_to_Manage_Self__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Impaired Ability to Manage Self</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impulse_Control_Diminished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Impulse Control Diminished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inhalants_Age_of_First_Use__c</fullName>
        <label>Inhalants Age of First Use</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inhalants_Amount_Commonly_Used__c</fullName>
        <label>Inhalants Amount Commonly Used</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inhalants_Comment_Details__c</fullName>
        <label>Inhalants Comment/Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inhalants_Date_of_Last_Use__c</fullName>
        <label>Inhalants Date of Last Use</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inhalants_Details__c</fullName>
        <label>Inhalants Details</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Drug of Choice</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Patient Denies</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inhalants_Duration__c</fullName>
        <label>Inhalants Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>less than a month</fullName>
                </value>
                <value>
                    <fullName>less than 3 months</fullName>
                </value>
                <value>
                    <fullName>less than 6 months</fullName>
                </value>
                <value>
                    <fullName>less than a year</fullName>
                </value>
                <value>
                    <fullName>more than a year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inhalants_How_Often__c</fullName>
        <label>Inhalants How Often</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>daily</fullName>
                </value>
                <value>
                    <fullName>1x per week</fullName>
                </value>
                <value>
                    <fullName>2x per week</fullName>
                </value>
                <value>
                    <fullName>3x per week</fullName>
                </value>
                <value>
                    <fullName>4x per week</fullName>
                </value>
                <value>
                    <fullName>1x per month or less</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inhalants_Route__c</fullName>
        <label>Inhalants Route</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IV</fullName>
                </value>
                <value>
                    <fullName>Nasal</fullName>
                </value>
                <value>
                    <fullName>Oral</fullName>
                </value>
                <value>
                    <fullName>Smoke</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insurance_ID__c</fullName>
        <formula>Lead__r.Member_ID_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Insurance ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Irritability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Irritability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_patient_approved_for_treatment__c</fullName>
        <label>Is patient approved for treatment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_patient_pregnant__c</fullName>
        <label>Is patient pregnant?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_there_family_history_of_SA_or_MH__c</fullName>
        <label>Is there family history of SA or MH?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Isolates_from_Family_and_Friends__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Isolates from Family/Friends</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lack_of_Motivation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lack of Motivation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Late_to_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Late to Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Pre-Admission Assessments</relationshipLabel>
        <relationshipName>Pre_Admission_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Issues__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal Issues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Less_Productive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Less Productive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level_of_Motivation__c</fullName>
        <label>Level of Motivation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mild</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Severe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lost_Job__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lost Job</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lost_Promotion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lost Promotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MR__c</fullName>
        <label>MR#</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Methadone_Age_of_First_Use__c</fullName>
        <label>Methadone Age of First Use</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Methadone_Amount_Commonly_Used__c</fullName>
        <label>Methadone Amount Commonly Used</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Methadone_Comment_Details__c</fullName>
        <label>Methadone Comment/Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Methadone_Details__c</fullName>
        <label>Methadone Details</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Drug of Choice</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Patient denies</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Methadone_Duration__c</fullName>
        <label>Methadone Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>less than a month</fullName>
                </value>
                <value>
                    <fullName>less than 3 months</fullName>
                </value>
                <value>
                    <fullName>less than 6 months</fullName>
                </value>
                <value>
                    <fullName>less than a year</fullName>
                </value>
                <value>
                    <fullName>a year or more</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>